--- a/Rmarkdown.Rmd
+++ b/Rmarkdown.Rmd
@@ -17,6 +17,7 @@ III. Calidad del Aire
 IV. Altas Hospitalarias
 V.  Relación
 VI. Conclusiones
+VII. Bibliografía
 
 ## Objetivos
 
@@ -48,21 +49,21 @@ La calidad del aire se puede definir como la concentración de contaminante que 
 
 Para poder medir la calidad del aire, es necesario conocer el valor del índice de calidad del aire (ICA), que nos indica la contaminación atmosférica y los efectos para la salud.
 
-El Índice de Calidad del Aire (ICA) define seis categorías de calidad del aire, cada una con su código de colores asociado:
+El Índice de Calidad del Aire (ICA) define seis categorías de calidad del aire, cada una con su código de colores asociado, un nivel para la salud y el índice de la calidad del aire:
 
--   Buena
+-   Verde: Buena para la salud (ICA de 0 a 50)
 
--   Razonablemente buena
+-   Amarillo: Moderada (ICA de 51 a 100)
 
--   Regular
+-   Naranja: Dañina a la salud para grupos sensibles (ICA de 101 a 150)
 
--   Desfavorable
+-   Rojo: Dañina a la salud (ICA 151 a 200)
 
--   Muy desfavorable
+-   Morado: Muy dañina a la salud (ICA 201 a 300)
 
--   Extremadamente desfavorable.
+-   Marrón: Peligrosa (ICA superior a 300)
 
-El cálculo se basa en la asignación de la peor categoría de los contaminantes medidos en las estaciones de control de las redes de vigilancia. Estos contaminantes son
+Para llevar a cabo el cálculo, se asigna la peor categoría de los contaminantes medidos en las estaciones de control de las redes de vigilancia. Estos contaminantes son:
 
 -   Partículas en suspensión (PM~10~)
 
@@ -77,6 +78,14 @@ El cálculo se basa en la asignación de la peor categoría de los contaminantes
 ## Relación
 
 ## Conclusiones
+
+## Bibliografía
+
+<https://www.ine.es/>
+
+<https://datos.gob.es/es/catalogo?tags_es=Aire>
+
+<https://www.fundacionaquae.org/wiki/como-se-mide-calidad-aire/>
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
